Ladili jsme grafiku

--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
     <link href='https://fonts.googleapis.com/css?family=Amatic+SC:400,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/application.css" />
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/libs/jquery.mThumbnailScroller.min.js"></script>
-    <link rel="stylesheet" href="/libs/jquery.mThumbnailScroller.css" />
-    <link rel="stylesheet" href="/libs/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
-    <script type="text/javascript" src="/libs/jquery.fancybox.pack.js?v=2.1.5"></script>
 </head>
 
 <body>
@@ -31,24 +26,16 @@
       <h1>
         <strong>Copywriter</strong> <span>hlavou i srdcem</span>
       </h1>
+      <h4>Společně najdeme ta správná slova, která Vás
+        <br>propojí s těmi správnými lidmi.</h4>
     </div>
   </section>
   <img src="/images/lidmila.svg" id="drawing" />
-  <div class="content-panel">
-  <div class="jumbo">
-    <p>
-      Společně najdeme ta správná slova, která
-    </p>
-    <p>
-      Vás propojí s těmi správnými lidmi.
-    </p>
-  </div>
-</div>
 </div>
 
 <div>
   <section class="panels">
-    <h2>JSEM TU PRO VÁS, POKUD POTŘEBUJETE</h2>
+    <h2><strong><span class="yellow">JSEM TU</strong></span> PRO VÁS, POKUD POTŘEBUJETE</h2>
     <ul class="flex flex-center">
       <li class="flex flex-center">Obsah na web
       <br>nebo sociální sítě</li>
@@ -70,40 +57,42 @@
 
 
 <section id="clients">
-  <div class="row">
-    <div class="col">
-      <img src="images/florea-logo.png" />
-      <p>Aktuálně spolupracujeme. Pro online květinářství píši články na blog, newslettery, reklamní texty i nabídky na slevové portály.</p>
+    <h2><strong><span class="yellow">PARŤÁCI,</strong></span> KTEŘÍ MĚ OSLOVILI</h2>
+    <P>(a dobře to dopadlo)
+    <div class="row">
+      <div class="col">
+        <img src="images/florea-logo.png" />
+        <p>Aktuálně spolupracujeme. Pro online květinářství píši články na blog, newslettery, reklamní texty i nabídky na slevové portály.</p>
+      </div>
+      <div class="col">
+        <img src="images/proudly-logo.png" />
+        <p>Aktuálně spolupracujeme na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
+      </div>
+      <div class="col">
+        <img src="images/hrady-jicin.png" />
+        <p>Aktuálně spolupracujeme na tvorbě obsahu na web a sociální sítě.</p>
+      </div>
     </div>
-    <div class="col">
-      <img src="images/proudly-logo.png" />
-      <p>Aktuálně spolupracujeme na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
+    <div class="row">
+      <div class="col">
+        <img src="images/logo-zoot.png" />
+        <p>Pro ZOOT jsem otextovala více než
+        <br>3 000 kousků oblečení a bytových doplňků pro muže, ženy a děti.</p>
+      </div>
+      <div class="col">
+        <img src="images/logo-fun-frames.png" />
+        <p>Kompletní otextování webových stránek včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
+      </div>
+      <div class="col">
+        <img src="images/logo-autofisera.png" />
+        <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout celému webu nový život.</p>
+      </div>
     </div>
-    <div class="col">
-      <img src="images/hrady-jicin.png" />
-      <p>Aktuálně spolupracujeme na tvorbě obsahu na web a sociální sítě.</p>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col">
-      <img src="images/logo-zoot.png" />
-      <p>Pro ZOOT jsem otextovala více než
-      <br>3 000 kousků oblečení a bytových doplňků pro muže, ženy a děti.</p>
-    </div>
-    <div class="col">
-      <img src="images/logo-fun-frames.png" />
-      <p>Kompletní otextování webových stránek včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
-    </div>
-    <div class="col">
-      <img src="images/logo-autofisera.png" />
-      <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout celému webu nový život.</p>
-    </div>
-  </div>
-</section>
+  </section>
 
-<div class="content-panel">
-  <section>
-    <h1>BUDE NÁM TO KLAPAT?</h1>
+  <section id="clients">
+    <h2><strong><span class="yellow">DREAM</strong></span> CLIENT</h2>
+    <p>(máte aspoň na 2 ze 4?)
     <div class="panels">
       <ul class="flex flex-center">
         <li class="flex flex-center">Oboustranná důvěra
@@ -120,19 +109,20 @@
   </section>
 </div>
 
+<div class="content-panel">
   <section class="flex flex-center flex-items-pad-1">
     <div>
-      <h2>LIDMILA</h2>
+      <h2><strong>LIDMILA</strong></h2>
     </div>
     <div>
-    Copywriterka, redaktorka, fotografka. Ke všem třem činnostem jsem přišla zcela náhodně. Mám totiž vystudované právo a nedostudovanou novinařinu. Když nemám v ruce klávesnici, jsem neklidná.
+    <strong>Copywriterka, redaktorka, fotografka.</strong> Ke všem třem činnostem jsem přišla zcela náhodně. Mám totiž vystudované právo a nedostudovanou novinařinu. Když nemám v ruce klávesnici, jsem neklidná.
     </div>
     <div>
-    Čas bez psaní zaplňuji trávením času na bowlingové dráze, na cestách, ve fotoateliéru anebo v kavárnách a vinárnách. Život mi dělá pestřejší můj křeček jménem Benedict a partner-programátor (což mluví samo za sebe).
+    Kromě psaní mě <strong>dělá šťastnou</strong> bowling, který hraji závodně. Cestování, fotografování, víno a kafe jsou mou vášní. Život mám <strong>ještě pestřejší</strong> díky křečkovi jménem Benedict a příteli-programátorovi (což mluví samo za sebe).
     </div>
   </section>
+</div>
 
-<div class="content-panel">
   <section id="contact">
     <div class="contacts flex flex-center">
       <p>
@@ -167,32 +157,30 @@
       </p>
     </div>
   </section>
-</div>
+
+  <section id="mail">
+    <div class="flex flex-center">
+    <a href="mailto:lidmilamarsalkova@gmail.com">lidmilamarsalkova@gmail.com</a>
+    , IČO 5684447, TEL 739 209 182
+    </div>
+  </section>
 
 <footer class="footer">
     <div class="footer-content">
         <div class="footer-secondary-links">
             <ul>
                 <li>Vytvořil <a href="http://rousek.name/">Josef Rousek</a></li>
-                <li>Ilustrace Anna Kočová, Agata Kuczminska a freepik.com</li>
+                <li>Ilustrace Anna Kočová</li>
             </ul>
         </div>
         <div class="footer-logo">
           <ul>
-            <li>Copyright 2016 Lidmila Maršálková</li>
+            <li>Copyright 2017 Lidmila Maršálková</li>
           </ul>
         </div>
     </div>
 </footer>
 
-<script>
-$(document).ready(function() {
-  $("#photos ul").mThumbnailScroller({
-    axis: "x"
-  });
-  $(".fancybox").fancybox();
-})
-</script>
 </body>
 
 </html>
