--- a/index.html
+++ b/index.html
@@ -33,81 +33,81 @@
   <img src="/images/lidmila.svg" id="drawing" />
 </div>
 
-<div>
-  <section class="panels">
-    <h2><strong><span class="yellow">JSEM TU</strong></span> PRO VÁS, POKUD POTŘEBUJETE</h2>
-    <ul class="flex flex-center">
-      <li class="flex flex-center">Obsah na web
-      <br>nebo sociální sítě</li>
-      <li class="flex flex-center">Copy facelift
-      <br>Vašich stránek</li>
-      <li class="flex flex-center">Otextovat
-        <br>produkty</li>
-    </ul>
-    <ul class="flex flex-center">
-      <li class="flex flex-center">Napsat klikatelné
-      <br>newslettery</li>
-      <li class="flex flex-center">Oslnit mailem, životopisem,
-      <br>medailonkem...</li>
-      <li class="flex flex-center">Povídat si, konzultovat,
-      <br>vysvětlit</li>
-    </ul>
-  </section>
-</div>
+<section class="panels">
+  <h2><strong><span class="yellow">JSEM TU</strong></span> PRO VÁS, POKUD POTŘEBUJETE</h2>
+  <ul class="flex flex-center">
+    <li class="flex flex-center">Obsah na web
+    <br>nebo sociální sítě</li>
+    <li class="flex flex-center">Copy facelift
+    <br>Vašich stránek</li>
+    <li class="flex flex-center">Otextovat
+      <br>produkty</li>
+  </ul>
+  <ul class="flex flex-center">
+    <li class="flex flex-center">Napsat klikatelné
+    <br>newslettery</li>
+    <li class="flex flex-center">Oslnit mailem, životopisem,
+    <br>medailonkem...</li>
+    <li class="flex flex-center">Povídat si, konzultovat,
+    <br>vysvětlit</li>
+  </ul>
+</section>
 
+<img class="horizontal-line" src="/images/line.svg" />
 
 <section id="clients">
-    <h2><strong><span class="yellow">PARŤÁCI,</strong></span> KTEŘÍ MĚ OSLOVILI</h2>
-    <P>(a dobře to dopadlo)
-    <div class="row">
-      <div class="col">
-        <img src="images/florea-logo.png" />
-        <p>Aktuálně spolupracujeme. Pro online květinářství píši články na blog, newslettery, reklamní texty i nabídky na slevové portály.</p>
-      </div>
-      <div class="col">
-        <img src="images/proudly-logo.png" />
-        <p>Aktuálně spolupracujeme na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
-      </div>
-      <div class="col">
-        <img src="images/hrady-jicin.png" />
-        <p>Aktuálně spolupracujeme na tvorbě obsahu na web a sociální sítě.</p>
-      </div>
+  <h2><strong><span class="yellow">PARŤÁCI,</strong></span> KTEŘÍ MĚ OSLOVILI</h2>
+  <P>(a dobře to dopadlo)
+  <div class="row">
+    <div class="col">
+      <img src="images/florea-logo.png" />
+      <p>Aktuálně spolupracujeme. Pro online květinářství píši články na blog, newslettery, reklamní texty i nabídky na slevové portály.</p>
     </div>
-    <div class="row">
-      <div class="col">
-        <img src="images/logo-zoot.png" />
-        <p>Pro ZOOT jsem otextovala více než
-        <br>3 000 kousků oblečení a bytových doplňků pro muže, ženy a děti.</p>
-      </div>
-      <div class="col">
-        <img src="images/logo-fun-frames.png" />
-        <p>Kompletní otextování webových stránek včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
-      </div>
-      <div class="col">
-        <img src="images/logo-autofisera.png" />
-        <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout celému webu nový život.</p>
-      </div>
+    <div class="col">
+      <img src="images/proudly-logo.png" />
+      <p>Aktuálně spolupracujeme na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
     </div>
-  </section>
+    <div class="col">
+      <img src="images/hrady-jicin.png" />
+      <p>Aktuálně spolupracujeme na tvorbě obsahu na web a sociální sítě.</p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col">
+      <img src="images/logo-zoot.png" />
+      <p>Pro ZOOT jsem otextovala více než
+      <br>3 000 kousků oblečení a bytových doplňků pro muže, ženy a děti.</p>
+    </div>
+    <div class="col">
+      <img src="images/logo-fun-frames.png" />
+      <p>Kompletní otextování webových stránek včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
+    </div>
+    <div class="col">
+      <img src="images/logo-autofisera.png" />
+      <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout celému webu nový život.</p>
+    </div>
+  </div>
+</section>
 
-  <section id="clients">
-    <h2><strong><span class="yellow">DREAM</strong></span> CLIENT</h2>
-    <p>(máte aspoň na 2 ze 4?)
-    <div class="panels">
-      <ul class="flex flex-center">
-        <li class="flex flex-center">Oboustranná důvěra
-        <br>v to, co děláme</li>
-        <li class="flex flex-center">SEO je pomocník, ne superhero</li>
-      </ul>
-      <ul class="flex flex-center">
-        <li class="flex flex-center">Umět zajít do nekonečna
-        <br>a ještě dál</li>
-        <li class="flex flex-center">Komunikace je klíčem
-        <br>k úspěchu</li>
-      </ul>
-    </div>
-  </section>
-</div>
+<img class="horizontal-line" src="/images/line.svg" />
+
+<section id="clients">
+  <h2><strong><span class="yellow">DREAM</strong></span> CLIENT</h2>
+  <p>(máte aspoň na 2 ze 4?)
+  <div class="panels">
+    <ul class="flex flex-center">
+      <li class="flex flex-center">Oboustranná důvěra
+      <br>v to, co děláme</li>
+      <li class="flex flex-center">SEO je pomocník, ne superhero</li>
+    </ul>
+    <ul class="flex flex-center">
+      <li class="flex flex-center">Umět zajít do nekonečna
+      <br>a ještě dál</li>
+      <li class="flex flex-center">Komunikace je klíčem
+      <br>k úspěchu</li>
+    </ul>
+  </div>
+</section>
 
 <div class="content-panel">
   <section class="flex flex-center flex-items-pad-1">
@@ -123,47 +123,47 @@
   </section>
 </div>
 
-  <section id="contact">
-    <div class="contacts flex flex-center">
-      <p>
-        <a href="https://www.linkedin.com/in/lmarsalkova" target="_blank" class="flex">
-          <i class="icon-linkedin-rect"></i>
-          #spojmese
-        </a>
-      </p>
-      <p>
-        <a href="https://www.facebook.com/copywriterlidmila" target="_blank" class="flex">
-          <i class="icon-facebook-rect"></i>
-          #lajknime
-        </a>
-      </p>
-      <p>
-        <a href="https://twitter.com/Liduskha" target="_blank" class="flex">
-          <i class="icon-twitter-bird"></i>
-          #tweetujmesi
-        </a>
-      </p>
-      <p>
-        <a href="https://www.instagram.com/lidmilka/" target="_blank" class="flex">
-          <i class="icon-instagram-filled"></i>
-          #sledujlidu
-        </a>
-      </p>
-      <p>
-        <a href="http://lidusepise.blogspot.cz/" target="_blank" class="flex">
-          <i class="icon-blogger-rect"></i>
-          #lidusepise
-        </a>
-      </p>
-    </div>
-  </section>
+<section id="contact">
+  <div class="contacts flex flex-center">
+    <p>
+      <a href="https://www.linkedin.com/in/lmarsalkova" target="_blank" class="flex">
+        <i class="icon-linkedin-rect"></i>
+        #spojmese
+      </a>
+    </p>
+    <p>
+      <a href="https://www.facebook.com/copywriterlidmila" target="_blank" class="flex">
+        <i class="icon-facebook-rect"></i>
+        #lajknime
+      </a>
+    </p>
+    <p>
+      <a href="https://twitter.com/Liduskha" target="_blank" class="flex">
+        <i class="icon-twitter-bird"></i>
+        #tweetujmesi
+      </a>
+    </p>
+    <p>
+      <a href="https://www.instagram.com/lidmilka/" target="_blank" class="flex">
+        <i class="icon-instagram-filled"></i>
+        #sledujlidu
+      </a>
+    </p>
+    <p>
+      <a href="http://lidusepise.blogspot.cz/" target="_blank" class="flex">
+        <i class="icon-blogger-rect"></i>
+        #lidusepise
+      </a>
+    </p>
+  </div>
+</section>
 
-  <section id="mail">
-    <div class="flex flex-center">
-    <a href="mailto:lidmilamarsalkova@gmail.com">lidmilamarsalkova@gmail.com</a>
-    , IČO 5684447, TEL 739 209 182
-    </div>
-  </section>
+<section id="mail">
+  <div class="flex flex-center">
+  <a href="mailto:lidmilamarsalkova@gmail.com">lidmilamarsalkova@gmail.com</a>
+  , IČO 5684447, TEL 739 209 182
+  </div>
+</section>
 
 <footer class="footer">
     <div class="footer-content">
