--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
       <h2>
         <span>Lidmila</span> Maršálková
       </h2>
-      <h1>
-        <strong>Copywriter</strong> <span>hlavou i srdcem</span>
-      </h1>
       <h4>Společně najdeme ta správná slova, která Vás
         <br>propojí s těmi správnými lidmi.</h4>
     </div>
@@ -36,18 +33,18 @@
 <section class="panels">
   <h2><strong><span class="yellow">JSEM TU</strong></span> PRO VÁS, POKUD POTŘEBUJETE</h2>
   <ul class="flex flex-center">
-    <li class="flex flex-center">Obsah na web
-    <br>nebo sociální sítě</li>
-    <li class="flex flex-center">Copy facelift
-    <br>Vašich stránek</li>
-    <li class="flex flex-center">Otextovat
-      <br>produkty</li>
+    <li class="flex flex-center">Upravit stávající
+    <br>nebo vytvořit nové texty</li>
+    <li class="flex flex-center">Popsat produkty,
+    <br>vymyslet slogan</li>
+    <li class="flex flex-center">Být více vidět
+      <br>nejen ve vyhledávačích</li>
   </ul>
   <ul class="flex flex-center">
-    <li class="flex flex-center">Napsat klikatelné
+    <li class="flex flex-center">Mít čtivé
     <br>newslettery</li>
-    <li class="flex flex-center">Oslnit mailem, životopisem,
-    <br>medailonkem...</li>
+    <li class="flex flex-center">Oslnit životopisem,
+    <br>medailonkem, básničkou...</li>
     <li class="flex flex-center">Povídat si, konzultovat,
     <br>vysvětlit</li>
   </ul>
@@ -56,58 +53,39 @@
 <img class="horizontal-line" src="/images/line.svg" />
 
 <section id="clients">
-  <h2><strong><span class="yellow">PARŤÁCI,</strong></span> KTEŘÍ MĚ OSLOVILI</h2>
-  <P>(a dobře to dopadlo)
+  <h2><strong><span class="yellow">PARŤÁCI,</strong></span> SE KTERÝMI JSME VYMYSLELI SKVĚLÉ VĚCI</h2>
   <div class="row">
     <div class="col">
       <img src="images/florea-logo.png" />
-      <p>Aktuálně spolupracujeme. Pro online květinářství píši články na blog, newslettery, reklamní texty i nabídky na slevové portály.</p>
+      <p>Velmi voňavá spolupráce ♥ Pro internetové květinářství stále píši články na blog, květinové newslettery, nabídky na slevové portály a popisuji jejich úžasné květiny.</p>
     </div>
     <div class="col">
       <img src="images/proudly-logo.png" />
-      <p>Aktuálně spolupracujeme na tvorbě obsahu na blog - rozhovory, články, PR a další.</p>
+      <p>Aktuálně spolupracujeme na tvorbě inspirativního obsahu na blog jako jsou rozhovory, články, PR a další.</p>
     </div>
     <div class="col">
       <img src="images/hrady-jicin.png" />
-      <p>Aktuálně spolupracujeme na tvorbě obsahu na web a sociální sítě.</p>
+      <p>S pomocí nových textů na webu a Facebook reklamy jsme dokázali získat nové zákazníky a fanoušky stránky.</p>
     </div>
   </div>
   <div class="row">
     <div class="col">
       <img src="images/logo-zoot.png" />
       <p>Pro ZOOT jsem otextovala více než
-      <br>300 000 kousků oblečení a bytových doplňků pro muže, ženy a děti.</p>
+      <br>300 000 kousků oblečení a bytových doplňků.</p>
     </div>
     <div class="col">
       <img src="images/logo-fun-frames.png" />
-      <p>Kompletní otextování webových stránek včetně popisků k produktům. Došlo také na vytvoření několika příspěvků na sociální sítě.</p>
+      <p>Nové texty na webu a příspěvky na sociálních sítích přilákali mnoho zákazníků a fanoušků.</p>
     </div>
     <div class="col">
-      <img src="images/logo-autofisera.png" />
-      <p>Oprášení starých textů na webu, kterým stačil menší facelift a tím se podařilo vdechnout celému webu nový život.</p>
+      <img src="images/Talisman_Logo.png" />
+      <p>Tvorba obsahu od textů po fotografie. Talisman se rozrostl o nové týborníky, které jsme získali díky Facebook reklamě a novým textům na webu.</p>
     </div>
   </div>
 </section>
 
 <img class="horizontal-line" src="/images/line.svg" />
-
-<section id="clients">
-  <h2><strong><span class="yellow">DREAM</strong></span> CLIENT</h2>
-  <p>(máte aspoň na 2 ze 4?)
-  <div class="panels">
-    <ul class="flex flex-center">
-      <li class="flex flex-center">Oboustranná důvěra
-      <br>v to, co děláme</li>
-      <li class="flex flex-center">SEO je pomocník, ne superhero</li>
-    </ul>
-    <ul class="flex flex-center">
-      <li class="flex flex-center">Umět zajít do nekonečna
-      <br>a ještě dál</li>
-      <li class="flex flex-center">Komunikace je klíčem
-      <br>k úspěchu</li>
-    </ul>
-  </div>
-</section>
 
 <div class="content-panel">
   <section class="flex flex-center flex-items-pad-1">
@@ -118,7 +96,7 @@
     <strong>Copywriterka, redaktorka, fotografka.</strong> Ke všem třem činnostem jsem přišla zcela náhodně. Mám totiž vystudované právo a nedostudovanou novinařinu. Když nemám v ruce klávesnici, jsem neklidná.
     </div>
     <div>
-    Kromě psaní mě <strong>dělá šťastnou</strong> bowling, který hraji závodně. Cestování, fotografování, víno a kafe jsou mou vášní. Život mám <strong>ještě pestřejší</strong> díky křečkovi jménem Benedict a příteli-programátorovi (což mluví samo za sebe).
+    Kromě psaní mě <strong>dělá šťastnou</strong> bowling, který hraji závodně. Cestování, fotografování, víno a kafe jsou mou vášní. Úspěšně zvládám <strong>žít s programátorem</strong> a chápat jeho myšlenkové pochody.
     </div>
   </section>
 </div>
@@ -144,7 +122,7 @@
       </a>
     </p>
     <p>
-      <a href="https://www.instagram.com/lidmilka/" target="_blank" class="flex">
+      <a href="https://www.instagram.com/curlygirlcz/" target="_blank" class="flex">
         <i class="icon-instagram-filled"></i>
         #sledujlidu
       </a>
