Mám to prý jen commitnout

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
     <div class="col">
       <img src="images/Talisman_Logo.png" />
-      <p>Tvorba obsahu od textů po fotografie. Talisman se rozrostl o nové týborníky, které jsme získali díky Facebook reklamě a novým textům na webu.</p>
+      <p>Tvorba obsahu od textů po fotografie. Talisman se rozrostl o nové táborníky, které jsme získali díky Facebook reklamě a novým textům na webu.</p>
     </div>
   </div>
 </section>
