--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
       <p>Aktuálně spolupracujeme na tvorbě inspirativního obsahu na blog jako jsou rozhovory, články, PR a další.</p>
     </div>
     <div class="col">
-      <img src="images/hrady-jicin.png" />
-      <p>S pomocí nových textů na webu a Facebook reklamy jsme dokázali získat nové zákazníky a fanoušky stránky.</p>
+      <img src="images/Talisman_Logo.png" />
+      <p>Talisman se rozrostl o nové táborníky. Získali jsme je díky dobře zacílené Facebook reklamě a novým textům a fotografiím na webu.</p>
     </div>
   </div>
   <div class="row">
@@ -80,8 +80,8 @@
       <p>Nové texty na webu a příspěvky na sociálních sítích přilákali mnoho zákazníků a fanoušků.</p>
     </div>
     <div class="col">
-      <img src="images/Talisman_Logo.png" />
-      <p>Tvorba obsahu od textů po fotografie. Talisman se rozrostl o nové táborníky, které jsme získali díky Facebook reklamě a novým textům na webu.</p>
+      <img src="images/hrady-jicin.png" />
+      <p>S pomocí nových textů na webu a Facebook reklamy jsme dokázali získat nové zákazníky a fanoušky stránky.</p>
     </div>
   </div>
 </section>
@@ -94,10 +94,10 @@
       <h2><strong>LIDMILA</strong></h2>
     </div>
     <div>
-    <strong>Copywriterka, redaktorka, fotografka.</strong> Ke všem třem činnostem jsem přišla zcela náhodně. Mám totiž vystudované právo a nedostudovanou novinařinu. Když nemám v ruce klávesnici, jsem neklidná.
+    Copywriterka, redaktorka, fotografka. Ke všemu jsem přišla zcela náhodně. Mám totiž vystudované právo a nedostudovanou novinařinu. Když nemám v ruce klávesnici, jsem neklidná.
     </div>
     <div>
-    Kromě psaní mě <strong>dělá šťastnou</strong> bowling, který hraji závodně. Cestování, fotografování, víno a kafe jsou mou vášní. Úspěšně zvládám <strong>žít s programátorem</strong> a chápat jeho myšlenkové pochody.
+    Kromě psaní mě dělá šťastnou bowling, který hraji závodně. Cestování, fotografování, víno a kafe jsou mou vášní. Úspěšně zvládám žít s programátorem a chápat jeho myšlenkové pochody.
     </div>
   </section>
 </div>
