--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Copywriter hlavou i srdcem - Lidmila Maršálková</title>
-    <meta name="description" content="Copywriter hlavou i srdcem. Stvořím pro vás texty s emocemi, upřímností a nadšením, která se přenesou i na vaše zákazníky.">
-    <meta name="keywords" content="copywriter, fotograf, texty, články">
+    <title>Copywriter Lidmila Maršálková</title>
+    <meta name="description" content="Společně najdeme správná slova, která vás propojí se světem.">
+    <meta name="keywords" content="copywriter, praha, seo, fotograf, texty, články, obsah">
     <meta name="author" content="Josef Rousek">
     <meta property="og:type" content="website" />
     <meta property="og:image" content="http://lidmila.cz/images/liduska.png" />
@@ -23,8 +23,8 @@
       <h2>
         <span>Lidmila</span> Maršálková
       </h2>
-      <h4>Společně najdeme ta správná slova, která Vás
-        <br>propojí s těmi správnými lidmi.</h4>
+      <h4>Společně najdeme správná slova, která
+        <br>vás propojí se světem.</h4>
         <br />
     </div>
   </section>
@@ -34,15 +34,15 @@
 <section class="panels">
   <h2><strong><span class="yellow">JSEM TU</strong></span> PRO VÁS, POKUD POTŘEBUJETE</h2>
   <ul class="flex flex-center">
-    <li class="flex flex-center">Upravit stávající
-    <br>nebo vytvořit nové texty</li>
-    <li class="flex flex-center">Popsat produkty,
-    <br>vymyslet slogan</li>
+    <li class="flex flex-center">Texty na web, e-shop
+    <br>nebo blog</li>
+    <li class="flex flex-center">Vymyslet claim
+    <br>nebo jméno značky</li>
     <li class="flex flex-center">Být více vidět
       <br>nejen ve vyhledávačích</li>
   </ul>
   <ul class="flex flex-center">
-    <li class="flex flex-center">Mít čtivé
+    <li class="flex flex-center">Napsat čtivé
     <br>newslettery</li>
     <li class="flex flex-center">Oslnit životopisem,
     <br>medailonkem, básničkou...</li>
@@ -57,36 +57,40 @@
   <h2><strong><span class="yellow">PARŤÁCI,</strong></span> SE KTERÝMI JSME VYMYSLELI SKVĚLÉ VĚCI</h2>
   <div class="row">
     <div class="col">
-      <img src="images/florea-logo.png" />
-      <p>Velmi voňavá spolupráce ♥ Pro internetové květinářství stále píši články na blog, květinové newslettery, nabídky na slevové portály a popisuji jejich úžasné květiny.</p>
+      <img class="client-icon" src="/images/flower.svg" />
+      <h3> FLOREA.CZ </h3>
+      <p>Velmi voňavá spolupráce ♥ Články na blog, květinové newslettery, nabídky na slevové portály, popisy produktů.</p>
     </div>
     <div class="col">
-      <img src="images/proudly-logo.png" />
+      <img class="client-icon" src="/images/marker.svg" />
+      <h3> PROUDLY </h3>
       <p>Aktuálně spolupracujeme na tvorbě inspirativního obsahu na blog jako jsou rozhovory, články, PR a další.</p>
     </div>
     <div class="col">
-      <img src="images/Talisman_Logo.png" />
-      <p>Talisman se rozrostl o nové táborníky. Získali jsme je díky dobře zacílené Facebook reklamě a novým textům a fotografiím na webu.</p>
+      <img class="client-icon" src="/images/tent.svg" />
+      <h3> TÁBOR TALISMAN </h3>
+      <p>Talisman získal nové táborníky díky dobře zacílené Facebook reklamě a novým textům a fotografiím na webu.</p>
     </div>
   </div>
   <div class="row">
     <div class="col">
-      <img src="images/logo-zoot.png" />
+      <img class="client-icon" src="/images/high-heel.svg" />
+      <h3> ZOOT </h3>
       <p>Pro ZOOT jsem otextovala více než
       <br>300 000 kousků oblečení a bytových doplňků.</p>
     </div>
     <div class="col">
-      <img src="images/logo-fun-frames.png" />
+      <img class="client-icon" src="/images/paint.svg" />
+      <h3> FUNFRAMES </h3>
       <p>Nové texty na webu a příspěvky na sociálních sítích přilákali mnoho zákazníků a fanoušků.</p>
     </div>
     <div class="col">
-      <img src="images/hrady-jicin.png" />
-      <p>S pomocí nových textů na webu a Facebook reklamy jsme dokázali získat nové zákazníky a fanoušky stránky.</p>
+      <img class="client-icon" src="/images/castle.svg" />
+      <h3> SKÁKACÍ HRADY JIČÍN </h3>
+      <p>S pomocí nových textů na webu a Facebook reklamy jsme oslovili nové zákazníky.</p>
     </div>
   </div>
 </section>
-
-<img class="horizontal-line" src="/images/line.svg" />
 
 <div class="content-panel">
   <section class="flex flex-center flex-items-pad-1">
@@ -150,6 +154,13 @@
             <ul>
                 <li>Vytvořil <a href="http://rousek.name/">Josef Rousek</a></li>
                 <li>Ilustrace Anna Kočová</li>
+                <li> Ikony od:
+                  <a href="https://www.flaticon.com/authors/smashicons" title="Smashicons">Smashicons</a>,
+                  <a href="https://www.flaticon.com/authors/creaticca-creative-agency" title="Creaticca Creative Agency">Creaticca</a>,
+                  <a href="https://www.flaticon.com/" title="Flaticon">flaticon</a>,
+                  <a href="https://www.flaticon.com/authors/dinosoftlabs" title="DinosoftLabs">DinosoftLabs</a>,
+                  <a href="https://www.freepik.com/" title="Flaticon">freepik</a>
+                </li>
             </ul>
         </div>
         <div class="footer-logo">
