--- a/index.html
+++ b/index.html
@@ -171,6 +171,17 @@
     </div>
 </footer>
 
+
+
+<div id="slideout">
+  <img src="images/stovkomat.png" alt="Feedback" />
+  <div id="slideout_inner">
+    <a href="https://www.stovkomat.cz?ref=Q7NPqgqrfF4x">
+      Textik.
+    </a>
+  </div>
+</div>
+
 </body>
 
 </html>
