--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
 
 
 <div id="slideout">
-  <img src="images/stovkomat.png" alt="Feedback" />
+  <img src="images/stovkomat.png" alt="Stovkomat" />
   <div id="slideout_inner">
-    <a href="https://www.stovkomat.cz?ref=Q7NPqgqrfF4x">
-      Textik.
+    <a href="https://www.stovkomat.cz/uzivatel/lidushe?ref=Q7NPqgqrfF4x">
+      Co dalšího spolu můžeme podniknout zjistíte na Stovkomatu.
     </a>
   </div>
 </div>
