Fix instagram link and remove stovkomat

--- a/index.html
+++ b/index.html
@@ -127,15 +127,9 @@
       </a>
     </p>
     <p>
-      <a href="https://www.instagram.com/curlygirlcz/" target="_blank" class="flex">
+      <a href="https://www.instagram.com/lidmilka/" target="_blank" class="flex">
         <i class="icon-instagram-filled"></i>
         #sledujlidu
-      </a>
-    </p>
-    <p>
-      <a href="http://lidusepise.blogspot.cz/" target="_blank" class="flex">
-        <i class="icon-blogger-rect"></i>
-        #lidusepise
       </a>
     </p>
   </div>
@@ -170,17 +164,6 @@
         </div>
     </div>
 </footer>
-
-
-
-<div id="slideout">
-  <img src="images/stovkomat.png" alt="Stovkomat" />
-  <div id="slideout_inner">
-    <a href="https://www.stovkomat.cz/uzivatel/lidushe?ref=Q7NPqgqrfF4x">
-      Co dalšího spolu můžeme podniknout zjistíte na Stovkomatu.
-    </a>
-  </div>
-</div>
 
 </body>
 
