--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
   </div>
 </section>
 
+<section class="panels">
+  <div class="flex flex-center">
+    <a href="/resources/copycenik.pdf" class="flex flex-center pricelist-link" target="_blank">Za kolik Vám to napíšu?</a>
+  </div>
+</section>
+
 <div class="content-panel">
   <section class="flex flex-center flex-items-pad-1">
     <div>
